SFDCProject/src/objects/Generation_Assets__c.object
<CustomObject>
    <fields>
        <fullName>Date_Inspection_Requested__c</fullName>
        <description>For HI projects, the date the inspection for the project has been requested.</description>
        <label>Date Inspection Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_Site_Audit_was_Scheduled__c</fullName>
        <description>Date when Site Audit Scheduled field was populated</description>
        <inlineHelpText>Date when Site Audit Scheduled field was populated</inlineHelpText>
        <label>Date when Site Audit was Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_after_Customer_Signoff__c</fullName>
        <description>IF PTO hasn&apos;t been reached this indicates the number of days that have passed between the Customer Signoff and &quot;today&quot;
IF PTO has been reached this indicates the number of days that have passed between the PTO and Customer Signoff dates</description>
        <formula>IF(ISBLANK(PTO__c),TODAY() - Customer_Signoff__c, PTO__c-Customer_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF PTO hasn&apos;t been reached this indicates the number of days that have passed between the Customer Signoff and &quot;today&quot;
IF PTO has been reached this indicates the number of days that have passed between the PTO and Customer Signoff dates</inlineHelpText>
        <label>Days after Customer Signoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_after_PTO_and_no_rebate_form_sent__c</fullName>
        <formula>If (ISBLANK(Rebate_Form_Sent__c), 
(Today () - PTO__c), 
(Rebate_Form_Sent__c - PTO__c) 
)</formula>
        <label>Days after PTO and no rebate form sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_M2_since_M1__c</fullName>
        <formula>If (ISBLANK(M2_proof_substantial_completion__c), 
(Today () -  M1_proof_panel_inverter_delivery__c), 
(M2_proof_substantial_completion__c - M1_proof_panel_inverter_delivery__c)
)</formula>
        <label>Days for M2 since M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_PTO_since_M2__c</fullName>
        <formula>If (ISBLANK(PTO__c), 
(Today () -  M2_proof_substantial_completion__c), 
(PTO__c - M2_proof_substantial_completion__c)
)</formula>
        <label>Days for PTO since M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_CAP_Approved_to_Permit_Submit__c</fullName>
        <description>[Requested in SFDC-591]</description>
        <formula>Permit_Submitted_Date__c -  CAP_date_approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;CAP Date Approved&quot; and &quot;Permit Submitted&quot;</inlineHelpText>
        <label>Days from CAP Approved to Permit Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_CAP_Date_Approv_to_NTP_Granted__c</fullName>
        <description>[Requested in SFDC-558]</description>
        <formula>NTP_Granted__c -  CAP_date_approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;CAP Date Approved&quot; and &quot;NTP Granted&quot;</inlineHelpText>
        <label>Days from CAP Date Approv to NTP Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Commence_Construction_to_Final__c</fullName>
        <description>[Requested in SFDC-563]</description>
        <formula>Final_Inspection_Signoff__c - Commencement_of_Construction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Commencement of Construction Date&quot; and &quot;Final Inspection Signoff&quot; Date</inlineHelpText>
        <label>Days from Commence Construction to Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Cust_Signoff_to_SA_Complete__c</fullName>
        <description>[Requested in SFDC-555]</description>
        <formula>Site_Audit_Complete__c -  Customer_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Customer Signoff&quot; and &quot;Site Audit Complete&quot;</inlineHelpText>
        <label>Days from Cust Signoff to SA Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Final_to_Intercon_Docs_Complet__c</fullName>
        <description>[Requested in SFDC-564]</description>
        <formula>Interconnect_App_Complete__c -  Final_Inspection_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Final Inspection Signoff&quot; and &quot;Interconnect App Complete&quot;</inlineHelpText>
        <label>Days from Final to Intercon Docs Complet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Interconnect_App_Comp_to_PTO__c</fullName>
        <description>[Requested in SFDC-565]</description>
        <formula>PTO__c -  Interconnect_App_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Interconnect App Complete&quot; and &quot;PTO&quot;</inlineHelpText>
        <label>Days from Interconnect App Comp to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Layout_Rcvd_to_CAP_Date_Approv__c</fullName>
        <description>[Requested in SFDC-557]</description>
        <formula>CAP_date_approved__c -  Layout_Rcvd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Layout Received&quot; and &quot;CAP Date Approved&quot;</inlineHelpText>
        <label>Days from Layout Rcvd to CAP Date Approv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_NTP_Granted_to_Permit_Submit__c</fullName>
        <description>[Requested in SFDC-559]</description>
        <formula>Permit_Submitted_Date__c -  NTP_Granted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;NTP Granted&quot; and &quot;Permit Submitted Date&quot;</inlineHelpText>
        <label>Days from NTP Granted to Permit Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Permit_Apprv_to_Commence_Const__c</fullName>
        <description>[Requested in SFDC-562]</description>
        <formula>Commencement_of_Construction__c -  Permit_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Permit Approval Date&quot; and &quot;Commencement of Construction Date&quot;</inlineHelpText>
        <label>Days from Permit Apprv to Commence Const</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Permit_Submit_to_Permit_Approv__c</fullName>
        <description>[Requested in SFDC-560]</description>
        <formula>Permit_Approval_Date__c -  Permit_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Permit Submitted Date&quot; and &quot;Permit Approval Date&quot;</inlineHelpText>
        <label>Days from Permit Submit to Permit Approv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_SA_Complete_to_SA_Results_Recd__c</fullName>
        <description>[Requested in SFDC-556]</description>
        <formula>IF(Site_Audit_Results_Rcvd__c -  Site_Audit_Complete__c  &lt; Layout_Rcvd__c - Site_Audit_Complete__c, Site_Audit_Results_Rcvd__c - Site_Audit_Complete__c, Layout_Rcvd__c - Site_Audit_Complete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;Site Audit Complete&quot; to the earlier of &quot;Site Audit Results Received&quot; or &quot;Layout Received&quot;</inlineHelpText>
        <label>Days from SA Complete to SA Results Recd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_M1__c</fullName>
        <formula>IF( ISBLANK( PTO__c ) , ( TODAY() -  M1_proof_panel_inverter_delivery__c ), (PTO__c - M1_proof_panel_inverter_delivery__c ))</formula>
        <label>Days since M1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_CAP_Date_Approved__c</fullName>
        <description>[SFDC-424] Number of Days between &quot;SR Signoff&quot; and  &quot;CAP Date approved&quot;</description>
        <formula>CAP_date_approved__c - SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between &quot;SR Signoff&quot; and  &quot;CAP Date approved&quot;</inlineHelpText>
        <label>Days to CAP Date Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Construction_Completion__c</fullName>
        <description>[Requested in SFDC-427] Calculates the number of days between the &quot;SR Signoff&quot; date and &quot;Meter Registration&quot; date</description>
        <formula>Meter_Test_Date__c -  SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the number of days between the &quot;SR Signoff&quot; date and &quot;Meter Registration&quot; date</inlineHelpText>
        <label>Days to Construction Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_NTP_Granted__c</fullName>
        <description>[SFDC-425] Number of Days between &quot;SR Signoff&quot; and the &quot;NTP Granted&quot; date</description>
        <formula>NTP_Granted__c  -  SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between &quot;SR Signoff&quot; and the &quot;NTP Granted&quot; date</inlineHelpText>
        <label>Days to NTP Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Permit_Approval_Date__c</fullName>
        <description>[SFDC-426]
Number of Days between &quot;SR Signoff&quot; and the &quot;Permit Approval Date&quot;</description>
        <formula>Permit_Approval_Date__c  -  SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between &quot;SR Signoff&quot; and the &quot;Permit Approval Date&quot;</inlineHelpText>
        <label>Days to Permit Approval Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Permit_Submitted_Date__c</fullName>
        <description>[Requested in SFDC-618]</description>
        <formula>Permit_Submitted_Date__c -  SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computes the days between &quot;SR Signoff&quot; and &quot;Permit Submitted&quot; Date</inlineHelpText>
        <label>Days to Permit Submitted Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Site_Audit_Results_Rcvd__c</fullName>
        <description>Counts &quot;SR Signoff&quot; to the earlier of &quot;Site Audit Results Rcvd&quot; or &quot;Layout Rcvd&quot;</description>
        <formula>IF(Site_Audit_Results_Rcvd__c - SR_Signoff__c  &lt; Layout_Rcvd__c - SR_Signoff__c,  Site_Audit_Results_Rcvd__c  - SR_Signoff__c, Layout_Rcvd__c - SR_Signoff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counts &quot;SR Signoff&quot; to the earlier of &quot;Site Audit Results Rcvd&quot; or &quot;Layout Rcvd&quot;</inlineHelpText>
        <label>Days to Site Audit Results Rcvd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Site_Audit_Scheduled__c</fullName>
        <description>[SFDC-422] Number of Days between &quot;SR Signoff&quot; and the &quot;Site Audit Scheduled&quot; date</description>
        <formula>DATEVALUE(Site_Audit_Scheduled__c) - SR_Signoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days between &quot;SR Signoff&quot; and the &quot;Site Audit Scheduled&quot; date</inlineHelpText>
        <label>Days to Site Audit Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Welcome_Call_Made__c</fullName>
        <label>Days until Welcome Call Made</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Unique identifier for each generating asset, sharable among external partners. Intended as the successor to sunRunHomeId.</description>
        <label>Deal ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_on_Hold__c</fullName>
        <label>Deal on Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <description>Reason install partner lists as why project is not completed timely</description>
        <label>Delay Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Back ordered equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to schedule install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to sign c/o</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to sign RRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reach cust to verify NEM install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change order delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Change order form (or new contract)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Comm. (biz name, CA, Officer Cert)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Cond.Approval or CO not signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Conditional Approval or full pymt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: CPASS: Need to sign up for ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Expired credit (over 60 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Failed credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Homeowner’s sig (who passed cr ck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing Initials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing Payment Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Missing rep signature or ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Mortgage stmt (Owner/Addy ver)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Need credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Need first 5 pages of trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR: Printed name or legible signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has health issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants bigger system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO A – delay certain (IRS required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO B – delay possible (IRS TBD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO C – delay unlikely, review needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA permitting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Refunded__c</fullName>
        <label>Deposit Amount Refunded</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_ID__c</fullName>
        <description>ID of Deposit
[Oracle ERP System Use Only]</description>
        <inlineHelpText>[Oracle ERP System Use Only]</inlineHelpText>
        <label>Deposit ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Refund_Date__c</fullName>
        <label>Deposit Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_ID__c</fullName>
        <description>ID of EPC
[Oracle ERP System Use Only]</description>
        <inlineHelpText>[Oracle ERP System Use Only]</inlineHelpText>
        <label>EPC ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Price__c</fullName>
        <label>EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_price_per_watt__c</fullName>
        <formula>EPC_Price__c / System_Size_DC__c/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC price per watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Utility__c</fullName>
        <description>Utility naming convention needed for Oracle</description>
        <label>ERP Utility</label>
        <picklist>
            <picklistValues>
                <fullName>AZ - Arizona Public Service (APS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Salt River Project Power (SRP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson Electric Power (TEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Anaheim Public Utilities (APU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Banning Power (BPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - City of Burbank Water and Power (BWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Imperial Irrigation District (IID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles Dept of Water &amp; Power  (LADWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pacific Gas &amp; Electric (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pasadena Water and Power (PWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento Municipal Utility District (SMUD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Southern California Edison (SCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Xcel Energy (XCEL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaiian Electric Company (HECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii Electric Light Company (HELCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Kauai Island Utility Cooperative (KIUC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Maui Electric Company (MECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA - National Grid (NGE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA - NSTAR (NEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA - Unitil (UC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA - Western Massachusetts Electric Company (WMECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Allegheny Power System (APS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Baltimore Gas &amp; Electric (BG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Delmarva Power and Light Company (DPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Potomac Electric Power Company (PEPCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Southern Maryland Electric Cooperative (SMECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ - Atlantic City Electric (ACE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ - Jersey Central Power &amp; Light (JCP&amp;L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ - Public Service Electric and Gas Company (PSE&amp;G)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit_Method__c</fullName>
        <label>Electricity Deposit Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit_Processed__c</fullName>
        <label>Electricity Deposit Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electricity_Deposit__c</fullName>
        <label>Electricity Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_of_SR_Signoff_Waiting_Period__c</fullName>
        <description>Calculates when the 21 day waiting period ends and the customer can select a different type of payment.</description>
        <formula>SR_Signoff__c + 21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Non-Editable, Calculates Date based on SR Signoff</inlineHelpText>
        <label>End of SR Signoff Waiting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_change_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the change order indicated an equipment change only but all original contract terms were left as is</description>
        <label>Equipment change only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Rebate_Amount__c</fullName>
        <inlineHelpText>Amount of CSI rebate estimated per the original agreement</inlineHelpText>
        <label>Est Rebate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Refund_for_purchase_Yr_17__c</fullName>
        <label>Est Refund for purchase Yr 17</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Refund_for_purchase_Yr_2__c</fullName>
        <label>Est Refund for purchase Yr 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Yr_1_Gen_Monitoring__c</fullName>
        <description>Estimated year 1 generation per final docs (as built) for use in monitoring; can vary from the contractual amount if as-built differed</description>
        <label>Est Yr 1 Gen Monitoring</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Yr_1_Generation__c</fullName>
        <inlineHelpText>Estimated generation in year 1 of the agreement in kWh</inlineHelpText>
        <label>Est Yr 1 Generation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_PTO_Date__c</fullName>
        <description>When the customer expected their system to go live</description>
        <inlineHelpText>When the customer expected their system to go live</inlineHelpText>
        <label>Expected PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMV_Valuation_Date__c</fullName>
        <label>FMV Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Design_Approval_Requested__c</fullName>
        <inlineHelpText>The date the Partner requested the Design Approval</inlineHelpText>
        <label>Facility Design Approval Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Design_Approved__c</fullName>
        <label>Facility Design Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Call_Status__c</fullName>
        <label>Final Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 4 - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Call__c</fullName>
        <label>Final Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Date__c</fullName>
        <description>When PTO and Rebate Form Sent are populated, Final Completion Date is timestamped with the greater of those two fields.</description>
        <inlineHelpText>When PTO and Rebate Form Sent are populated, Final Completion Date is timestamped with the greater of those two fields.</inlineHelpText>
        <label>Final Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Signoff__c</fullName>
        <label>Final Inspection Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Rebate_Amount__c</fullName>
        <inlineHelpText>CSI rebate amount confirmed</inlineHelpText>
        <label>Final Rebate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Program__c</fullName>
        <description>Used for tracking ancillary programs like PACE</description>
        <inlineHelpText>Is the project part of a financing program like PACE?</inlineHelpText>
        <label>Financing Program</label>
        <picklist>
            <picklistValues>
                <fullName>SCEIP - Sonoma PACE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_call__c</fullName>
        <description>Call to confirm OK to turn on facility, let them know about web access, partner will give operations manuals.</description>
        <inlineHelpText>Date we placed call to follow up with customer post PTO.  Confirm OK to turn on facility, let them know about web access, partner will give operations manuals.</inlineHelpText>
        <label>Follow up call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_System_cost__c</fullName>
        <description>Full system price per the EPC</description>
        <inlineHelpText>Full system price per the EPC</inlineHelpText>
        <label>Full System cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Amt_Rec_d__c</fullName>
        <label>Grant Amt Rec&apos;d</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Date__c</fullName>
        <label>Grant Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Number__c</fullName>
        <label>Grant Application Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_ID__c</fullName>
        <description>ID of Grant
[Oracle ERP System Use Only]</description>
        <inlineHelpText>[Oracle ERP System Use Only]</inlineHelpText>
        <label>Grant ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Rec_d_Date__c</fullName>
        <label>Grant Rec&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <formula>Transfer_Price__c *0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Amt Applied For</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HIC_Approved__c</fullName>
        <description>[Requested in SFDC-599]</description>
        <inlineHelpText>This field represents that the homeowner has returned a signed Home Improvement Contract (HIC) for a main service panel upgrade on this date</inlineHelpText>
        <label>HIC Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIC_Status__c</fullName>
        <description>[Requested in SFDC-599]</description>
        <inlineHelpText>This field represents the status of the Home Improvement Contract (HIC) between the homeowner and installer for a main service panel upgrade</inlineHelpText>
        <label>HIC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested from builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HOA_Approved__c</fullName>
        <description>[Requested in SFDC-356]</description>
        <label>HOA Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Status__c</fullName>
        <description>[Requested in SFDC-356]</description>
        <label>HOA Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <description>[Requested in SFDC-356]</description>
        <label>HOA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - attached home / single-family condo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HasDaylightSavings__c</fullName>
        <formula>Account_Name__r.HasDaylightSavings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Daylight Savings</label>
        <type>Text</type>
    </fields>
</CustomObject>